<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fondo"
    tools:context=".Conversor">

    <ImageView
        android:id="@+id/imgconversor"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:src="@drawable/conversor"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25dp"
        android:textColor="@color/purple_500"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:text="@string/conversor"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:id="@+id/txtMonto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ingresemonto"
        android:layout_gravity="center"
        android:inputType="number"
        android:digits="0123456789.,"

        />

    <TextView
        android:id="@+id/tvSeleccionarMoneda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="20dp"
        android:textColor="@color/moneda"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:text="@string/seleccionemoneda"
        android:layout_marginTop="15dp"
        />

    <RadioGroup android:id="@+id/rgMonedas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:buttonTint="@color/moneda"
            android:id="@+id/rDolar"
            android:checked="false"
            android:text="@string/dolar">
        </RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:buttonTint="@color/moneda"
            android:id="@+id/rEuro"
            android:text="@string/euro"
            android:checked="false">
        </RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:buttonTint="@color/moneda"
            android:textSize="20dp"
            android:id="@+id/rReal"
            android:text="@string/real"
            android:checked="false">
        </RadioButton>
    </RadioGroup>

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="70dp"
        android:backgroundTint="@color/moneda"
        android:hint="@string/resultado"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_marginLeft="70dp"
        android:layout_height="3dp"
        android:background="@color/moneda"
        android:orientation="horizontal">
    </LinearLayout>


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnConvertir"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:text="@string/btnConvertir"
            />

        <Button
            android:id="@+id/btnReiniciar"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:text="@string/btnReiniciar"
            />
    </LinearLayout>


</LinearLayout>