<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="248dp"
        android:layout_height="172dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/calculadora" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="417dp"
        android:layout_height="54dp"
        android:layout_marginTop="260dp"
        android:background="#401010"
        android:backgroundTint="@color/moneda"
        android:text="0"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sumar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="20dp"
        android:text="@string/suma"
        app:layout_constraintEnd_toStartOf="@+id/restar"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/zoommas"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/zoommas"
        app:layout_constraintBottom_toTopOf="@+id/ocultar"
        app:layout_constraintEnd_toStartOf="@+id/zoommenos"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/ocultar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="20dp"
        android:text="ocultar"
        app:layout_constraintEnd_toStartOf="@+id/reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reset"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="73dp"
        android:background="#FFFFFF"
        android:text="reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ocultar"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/zoommenos"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="16dp"
        android:text="@string/zoommenos"
        app:layout_constraintBottom_toTopOf="@+id/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/zoommas" />

    <Button
        android:id="@+id/restar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="8dp"
        android:text="@string/resta"
        app:layout_constraintBottom_toTopOf="@+id/zoommenos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sumar"
        app:layout_constraintVertical_bias="0.71000004" />

</androidx.constraintlayout.widget.ConstraintLayout>
